[package]
name = "basic"
version = "0.1.1"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "A simple example application"
homepage = "http://riker.rs"
license = "MIT"
readme = "README.md"

[dependencies]
riker = "0.1.1"
riker-default = "0.1.1"
log = { version = "0.4", features = ["std"] }